--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/network-connector": "^6.2.9",
+    "@web3-react/trezor-connector": "^6.1.9",
+    "@web3-react/walletconnect-connector": "^6.2.13",
+    "@web3-react/walletlink-connector": "^6.2.14",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "ethers": "^5.6.9",
