--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fontsource/poppins": "^4.5.8",
+    "@nivo/core": "^0.72.0",
+    "@nivo/line": "^0.72.0",
     "framer-motion": "^6.3.16",
+    "moment": "^2.29.4",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
