--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fontsource/poppins": "^4.5.8",
+    "decimal.js": "^10.3.1",
     "framer-motion": "^6.3.16",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.4"
+    "recoil": "^0.7.4",
+    "web3-utils": "^1.7.4"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
