--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "ethers": "^5.6.9",
+    "react-device-detect": "^2.2.2",
     "typescript": "4.7.4"
   }
 }
