--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "web3-utils": "^1.7.4"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.222",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
