--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MODE=DEV
 API_DEV=http://3.36.64.198:4000/graphql
-API_PRODUCTION=http://3.36.64.198:4000/graphql
+API_PRODUCTION=https://3.36.64.198:4000/graphql
