--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "decimal.js": "^10.3.1",
     "framer-motion": "^6.3.16",
     "graphql": "^16.5.0",
+    "jsbi": "^4.3.0",
     "moment": "^2.29.4",
     "next": "12.1.6",
     "react": "18.2.0",
