TSV2-159 : Feat - Support for Goerli

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MODE=DEV
+TESTNET_CHAINID=5
 API_DEV=http://3.36.64.198:4000/graphql
 API_PRODUCTION=https://3.36.64.198:4000/graphql
 WATCHPACK_POLLING=true 
