--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql": "^16.5.0",
     "jsbi": "^4.3.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.37",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
