Feat - Mainnet env

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MODE=DEV
-TESTNET_CHAINID=4
-API_DEV=http://3.36.64.198:4000/graphql
-API_PRODUCTION=https://3.36.64.198:4000/graphql
+NEXT_PUBLIC_MODE=PRODUCTION
+NEXT_PUBLIC_TESTNET_CHAINID=5
+NEXT_PUBLIC_API_PRODUCTION=https://tosv2-api.tokamak.network/graphql
+NEXT_PUBLIC_API_DEV=https://3.36.64.198:4000/graphql
 WATCHPACK_POLLING=true 
