Change env for mainnet

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_MODE=DEV
+NEXT_PUBLIC_MODE=PRODUCTION
 NEXT_PUBLIC_TESTNET_CHAINID=5
 NEXT_PUBLIC_API_PRODUCTION=https://tosv2-api.tokamak.network/graphql
 NEXT_PUBLIC_API_DEV=https://tosv2-server.tokamak.network/graphql
