--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-native-web": "^0.18.12",
     "recoil": "^0.7.4",
     "web3-utils": "^1.7.4"
   },
