--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ NEXT_PUBLIC_MODE=PRODUCTION
 NEXT_PUBLIC_TESTNET_CHAINID=5
 NEXT_PUBLIC_API_PRODUCTION=https://tosv2-api.tokamak.network/graphql
 NEXT_PUBLIC_API_DEV=https://tosv2-server.tokamak.network/graphql
+NEXT_TOKEN_API=https://tonstarterapi.tokamak.network/v1
 WATCHPACK_POLLING=true 
