--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 NEXT_PUBLIC_MODE=DEV
 NEXT_PUBLIC_TESTNET_CHAINID=5
 NEXT_PUBLIC_API_PRODUCTION=https://tosv2-api.tokamak.network/graphql
-NEXT_PUBLIC_API_DEV=https://tosv2-server.tokamak.network/graphql
+# NEXT_PUBLIC_API_DEV=https://tosv2-server.tokamak.network/graphql
+NEXT_PUBLIC_API_DEV=https://localhost:4000/graphql
+
 WATCHPACK_POLLING=true 
