Feat : BondModal - new graph prototype

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/poppins": "^4.5.8",
     "@nivo/core": "^0.72.0",
     "@nivo/line": "^0.72.0",
+    "chart.js": "^4.2.1",
     "decimal.js": "^10.3.1",
     "framer-motion": "^6.5.1",
     "graphql": "^16.5.0",
@@ -25,6 +26,7 @@
     "moment-timezone": "^0.5.37",
     "next": "12.1.6",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-native-web": "^0.18.12",
     "recoil": "^0.7.4",
