--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
-  // "rules": {
-  //   "react/no-unescaped-entities": "off",
-  //   "@next/next/no-page-custom-font": "off"
-  // }
+  "extends": "next/core-web-vitals",
+  "plugins": ["unused-imports"],
+  "rules": {
+    "unused-imports/no-unused-imports": true
+    // "react/no-unescaped-entities": "off"
+    //   "@next/next/no-page-custom-font": "off"
+  }
 }
