--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@web3-react/walletlink-connector": "^6.2.14",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "ethers": "^5.6.9",
     "react-device-detect": "^2.2.2",
     "typescript": "4.7.4"
