--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,13 @@
 {
   "extends": "next/core-web-vitals",
   "plugins": ["unused-imports"],
+  "overrides": [
+    {
+      "files": ["**/*.ts", "**/*.tsx"]
+    }
+  ],
   "rules": {
-    "unused-imports/no-unused-imports": true
+    // "unused-imports/no-unused-imports": "error"
     // "react/no-unescaped-entities": "off"
     //   "@next/next/no-page-custom-font": "off"
   }
