--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "ethers": "^5.6.9",
     "react-device-detect": "^2.2.2",
-    "typescript": "4.7.4"
+    "typescript": "^4.9.5"
   }
 }
