--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
     }
   ],
   "rules": {
-    "unused-imports/no-unused-imports": "error"
+    // "unused-imports/no-unused-imports": "error"
     // "react/no-unescaped-entities": "off"
     //   "@next/next/no-page-custom-font": "off"
   }
