--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/poppins": "^4.5.8",
     "@nivo/core": "^0.72.0",
     "@nivo/line": "^0.72.0",
+    "bignumber.js": "^9.1.1",
     "chart.js": "^4.2.1",
     "decimal.js": "^10.3.1",
     "framer-motion": "^6.5.1",
